--- a/package.json
+++ b/package.json
@@ -9,8 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/cache": "^11.10.5",
+    "@emotion/react": "^11.10.6",
+    "@emotion/server": "^11.10.0",
+    "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.11",
+    "@mui/material": "^5.11.14",
+    "@react-oauth/google": "^0.8.0",
+    "@tanstack/react-query": "^4.28.0",
+    "@tanstack/react-query-devtools": "^4.28.0",
+    "apexcharts": "^3.37.1",
+    "axios": "^1.3.4",
+    "dotenv": "^16.0.3",
     "next": "13.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-apexcharts": "^1.4.0",
+    "react-dom": "18.2.0",
+    "sharp": "^0.32.1",
+    "simple-zustand-devtools": "^1.1.0",
+    "zustand": "^4.3.6"
   }
 }
