--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-oauth/google": "^0.8.0",
     "@tanstack/react-query": "^4.28.0",
     "@tanstack/react-query-devtools": "^4.28.0",
+    "aos": "^2.3.4",
     "apexcharts": "^3.37.1",
     "axios": "^1.3.4",
     "dotenv": "^16.0.3",
