--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "apexcharts": "^3.37.1",
     "axios": "^1.3.4",
     "dotenv": "^16.0.3",
+    "fraction.js": "^4.2.0",
     "next": "13.3.1",
     "react": "18.2.0",
     "react-apexcharts": "^1.4.0",
