added cron job for every 5 min

--- a/vercel.json
+++ b/vercel.json
@@ -3,5 +3,8 @@
     "pages/isr/**/*": {
       "maxDuration": 60
     }
+  },
+  "builds": {
+    "ignore": [".github/workflows/cron_job.yml"]
   }
 }
