--- a/.github/workflows/cron_job.yml
+++ b/.github/workflows/cron_job.yml
@@ -18,12 +18,12 @@ jobs:
           YEAR=$(echo "$RESPONSE" | jq -r .year)
           echo "AWS Region: $REGION, Year: $YEAR"
 
-      - name: Call warmup api and display response
-        env:
-          REVALIDATE_TOKEN: ${{ secrets.REVALIDATE_TOKEN }}
-        run: |
-          RESPONSE=$(curl -X GET "https://voltwise.vercel.app/api/warmup?secret=${REVALIDATE_TOKEN}")
-          echo "Warmup Response: $RESPONSE"
+      # - name: Call warmup api and display response
+      #   env:
+      #     REVALIDATE_TOKEN: ${{ secrets.REVALIDATE_TOKEN }}
+      #   run: |
+      #     RESPONSE=$(curl -X GET "https://voltwise.vercel.app/api/warmup?secret=${REVALIDATE_TOKEN}")
+      #     echo "Warmup Response: $RESPONSE"
 
       - name: Call /analytics API and display response
         env:
