added function timeout and re-ordered api calls in cron job

--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,9 @@
   "functions": {
     "pages/isr/**/*": {
       "maxDuration": 60
+    },
+    "api/revalidate/*.js": {
+      "maxDuration": 30
     }
   },
 
